fixed issue of text wrap on set-card figcation increasing container height; img now shrink to maintain consistent height

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,7 @@
         grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
         align-items: flex-end;
         display: grid;
-        grid-auto-rows: 1fr
+        grid-auto-rows: 1fr;
     }
     .even-columns img{
         object-position: center;
@@ -531,12 +531,6 @@ footer{
     }
 }
 
-.set-card img{
-    object-fit: contain;
-    margin: 0 auto;
-    max-height: 17rem;
-}
-
 .set-card{
     border: solid 1px var(--clr-neutral-300);
     border-radius: 2rem;
@@ -544,16 +538,26 @@ footer{
     flex-shrink: 1;
 }
 
+.set-card img{
+    height: 100%;
+    object-fit: contain;
+}
+
+.set-card .img-container{
+    height: 17rem;
+}
+
+.set-card figure{
+    height: 22rem;
+    display: flex;
+    flex-direction: column;
+}
+
 .set-card figcaption{
     margin-top: 1.7rem;
     display: flex;
     justify-content: space-between;
-}
-
-@media (min-width: 53em) {
-    .set-card figcaption{
-        font-size: clamp(1rem, 1.1vw, 1.8rem);
-    }
+    flex-shrink: 0;
 }
 
 .set-card button,
